force-app/main/default/staticresources/python/Disappear/src/objects/PubEmail__c.object
<CustomObject>
    <description>Object is created to store Emails send to Authors</description>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field is used to store the author record whom the emails are send</description>
        <label>Author</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Publication Emails</relationshipLabel>
        <relationshipName>Publication_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <description>Other users who are receiving this mail in CC</description>
        <label>CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <description>field is used to store the Email body which is send to the Authors</description>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pub_Name_Formula__c</fullName>
        <description>For which publication the email is send</description>
        <formula>Publication_Author__r.Publication__r.Publication_Title__c</formula>
        <label>Publication Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the value of the Junction record between Author and Publication</description>
        <label>Publication Author</label>
        <referenceTo>pubAuthor__c</referenceTo>
        <relationshipLabel>Publication Emails</relationshipLabel>
        <relationshipName>Publication_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Field is used to store the Subject Line of Email send to Author</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>used to store which type of Email send to Author</description>
        <label>Email Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invitation Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminder Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Author Approval Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft-Share Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Publication Email</label>
    <nameField>
        <displayFormat>Pub-Email-{000000}</displayFormat>
        <label>Publication Email</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>